listar reservas por usuario, correccion del metodo para que no muestre todas las reservas del sistema